resized for very small phone screen widths fixed mobile nav height and spacing to see everything

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -41,6 +41,11 @@ $medium-margin: 45px;
             width: 90px;
             border-radius: 100%;
             margin-bottom: 20px;
+            @media (max-width: 475px) {
+                width: 60px;
+                margin-bottom: 5px;
+                margin-top: 0px;
+            }
         }
 
         p {
@@ -78,6 +83,12 @@ $medium-margin: 45px;
                 margin-right: 15px;
                 &#github-icon {
                     margin-top: 18px;
+                    @media (max-width: 475px) {
+                        margin-top: 7px;
+                    }
+                }
+                @media (max-width: 475px) {
+                    margin-top: 5px;
                 }
             }
         }
@@ -87,13 +98,19 @@ $medium-margin: 45px;
             flex-direction: column;
             justify-content: start;
             align-items: start;
-            /* border: 1px solid $rose-madder; */
+            // border: 1px solid green;
             width: 100%;
             margin-top: 20px;
             height: fit-content;
-
+            @media (max-width: 475px) {
+                margin-top: 5px;
+            }
             .nav-link {
                 margin-bottom:10px;
+                @media (max-width: 475px) {
+                    font-size: 15px;
+                    margin-bottom: 5px;
+                }
                 a {
                     text-decoration: none;
                     font-size: 20px;
@@ -123,6 +140,11 @@ $medium-margin: 45px;
     height: 70px;
     width: 70px;
     margin-left: -30px;
+    @media (max-width: 475px) {
+        margin-left: -5px;
+        width: 55px;
+        height: 55px;
+    }
     background-color: $rose-madder;
     border-radius: 20px;
     border: 1px solid black;
